--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><title>ยินดีต้อนรับ เข้าเว็บไซต์  เลขาสมชาย</title></head>
 <body background ="https://source.unsplash.com/1600x900/?nature,water">
 <font color="blue">
-<center><h1><b>ยินดีต้อนรับเข้าสู่ เว็บไซต์ </b></h1><br>
+<center><h1><b>ยินดีต้อนรับเข้าสู่ เว็บไซต์ เลขาสมชาย</b></h1><br>
 <h3><u>การอบรมวันที่ 18 เมษายน 2565 </u> เรื่อง การเขียนโปรแกรม เว็บไซต์พื้นฐาน Html <br>
 <marquee><font color="pink">สวัสดีครับ ยินดีต้อนรับเข้าสู่การอบรม เรื่อง การเขียนโปรแกรม เว็บไซต์พื้นฐาน Html </marquee><br>
 <img src ="https://arit.kpru.ac.th//contents/phubet/IMG/2020/2020-04-13/songkran.PNG"
@@ -18,13 +18,13 @@ height="200"width="400" border="5"><br>
 <th>วันเดือนปี</th><th>รายการ</th><th>หมายเหตุ</th><th>ทดสอบ</th>
 </tr>
 <tr  align ="center">
-<td>18 เมษายน 65  </td><td bgcolor="red" align ="left">อบรมออนไลน์ เขียนเว็บพื้นฐาน  </td><td background="https://www.talingchun.go.th/tmp/71c2dc326cd5db8f8e594406b527fd27.jpg">Kruboycoding</td>
+<td>18 เมษายน 65  </td><td bgcolor="red" align ="left">อบรมออนไลน์ เขียนเว็บพื้นฐาน  </td><td background="https://www.talingchun.go.th/tmp/71c2dc326cd5db8f8e594406b527fd27.jpg">เลขาสมชาย</td>
 </tr>
 <tr align ="center">
-<td>25 เมษายน 65  </td><td bgcolor="yellow" align ="left">อบรมออนไลน์ เขียน Flowchart</td><td>Kruboycoding</td>
+<td>25 เมษายน 65  </td><td bgcolor="yellow" align ="left">อบรมออนไลน์ เขียน Flowchart</td><td>เลขาสมชาย</td>
 </tr>
 <tr align ="center">
-<td>30 เมษายน 65  </td><td align ="left">ปิดคอร์ส Summer3/64</td><td>Kruboycoding</td>
+<td>30 เมษายน 65  </td><td align ="left">ปิดคอร์ส Summer3/64</td><td>เลขาสมชาย</td>
 </tr>
 </table>
 </center>
